--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,22 @@
+html{
+    scroll-behavior: smooth;
+}
+body{
+    width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../img/esporte1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
 body, ul{
     padding: 0;
     margin: 0;
 }
+/* Inicio HEADER */
 a{
     color: #000;
     text-decoration: none;
@@ -17,6 +32,7 @@ a:hover{
     max-width: 30vw;
 }
 #header{
+    width: 100%;
     box-sizing: border-box;
     height: 70px;
     padding: 1rem;
@@ -35,31 +51,33 @@ a:hover{
     
 }
 #menu a:hover {
-    background: rgba(0, 0, 0, .05);
+    background: rgba(0, 0, 0, 0.288);
 }
 a.active{
-    background: rgba(0, 0, 0, .05);
+    background: rgba(0, 0, 0, 0.288);
 }
 #btn-mobile{
     display: none;
 }
-h1{
+/* FIM DO HEADER */
+/* TEXTO CENTRAL CARROSEL */
+#topText{
+    margin-top: 10px;
     text-align: center;
-    margin: 0;
-    padding: 0;
 }
+
 
 /*css de fora*/
 .main .swiper-button-next{
-    transform: translateY(-120%);  
+    transform: translateY(-100%);  
 }
 .main .swiper-button-prev{
-    transform: translateY(-120%); 
+    transform: translateY(-100%); 
 }
 .main .swiper-pagination{
     position: relative;
     margin-top: 1em;  
-}
+} 
 .sport{
     justify-content: space-around;
     margin-top: 2rem;
@@ -69,77 +87,238 @@ h1{
 }
 .main .swiper .swiper-wrapper .card-content .image .sport:hover{
     transform: scale(1.04);
+    
 }
-.card .content{
-    box-shadow: var(--shadow-color);
-    background-color: red;
-    margin-top: 15px;
-    border-radius: 2vw;
+
+/* Css Inicio Accordion */
+input {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
 }
-.content .tabs{
+.accordion-wrapper {
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
+    width: auto;
+    margin:0 auto;
+}
+.accordion {
+    width: 100%;
+    color: white;
+    overflow: hidden;
+    margin-bottom: 16px;
+}
+.accordion:last-child{
+    margin-bottom: 0;
+}
+.accordion-label {
     display: flex;
-}
-.content .tabs .tab{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    padding: 10px 0;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    padding: 16px;
+    background: rgba(4,57,94,.8);
+    font-weight: bold;
     cursor: pointer;
-    transition: background-color 0.1s ease-in-out;
+    font-size: 20px;
 }
-.card .content .tabs img{
-    width: 35px;
+.accordion-label:hover {
+    background: rgba(4,57,94,1);
 }
-.card .tabs .tab.selected{
-    background-color: var(--bgColor);
-    border-radius: 2vw;
+.accordion-label::after {
+    content: "\276F";
+    width: 16px;
+    height: 16px;
+    text-align: center;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 }
-.card .info-tabs{
-    background-color: var(--bgColor);
-    border-radius: 2vw;
+.accordion-content {
+    max-height: 0;
+    padding: 0 16px;
+    color: rgba(4,57,94,1);
+    background: white;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 }
-.card .tabs .tab:hover{
-    background-color: var(--icon-hover);
-    border-radius: 2vw;
+.accordion-content p{
+    margin: 0;
+    color: #000;
+    font-size: 23px;
 }
-.info-tabs .information{
-    min-height: 260px;
-    color: var(--text-color);
-    padding: 15px;
-    font-size: 21px;
-    max-height: 80px;
-    overflow-y: auto;
-    padding-right: 25px;  
+input:checked + .accordion-label {
+    background: rgba(4,57,94,1);
 }
-.info-tabs .information.selected{
+input:checked + .accordion-label::after {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+input:checked ~ .accordion-content {
+    max-height: 100vh;
+    padding: 16px;
+    background-color: #ff5574;
+    
+}
+
+/* Fim css accordion */
+
+h3{
+    font-size: 2em;
+    color: #e8e8e8;
+    text-shadow:  2px 2px 5px #000;
+    color: #e7e7e7;
+    text-align: center;
+}
+p{
+    font-size: 2em;
+    text-align: center;
+    text-shadow: 1px 1px 3px #ff5574;
+    margin: 0;
+    padding: 0;
+}
+/* CSS MAPS */
+.map{
+    text-align: center;
+    margin-top: 0.7em;
+    font-size: 2em;
+    letter-spacing: 3px;
+    outline: #d44848;
+}
+.map #maps iframe{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    margin-bottom: 2em; 
+    box-shadow:
+    -0.3px -0.3px 1.6px -6px rgba(0, 0, 0, 0.15),
+    -0.1px -0.1px 4.1px -6px rgba(0, 0, 0, 0.197),
+    0.7px 0.7px 7.8px -6px rgba(0, 0, 0, 0.225),
+    2.3px 2.5px 12.9px -6px rgba(0, 0, 0, 0.242),
+    5.2px 5.5px 19.6px -6px rgba(0, 0, 0, 0.254),
+    9.8px 10.5px 28.3px -6px rgba(0, 0, 0, 0.262),
+    17.4px 18.6px 39.5px -6px rgba(0, 0, 0, 0.268),
+    30.4px 32.6px 53.3px -6px rgba(0, 0, 0, 0.273),
+    56.3px 60.4px 68.9px -6px rgba(0, 0, 0, 0.279),
+    124px 133px 80px -6px rgba(0, 0, 0, 0.29);
+    min-width: 600px;
+    min-height: 600px;
+}
+/* Fim do CSS mapa */
+                        /* Inicio CSS FOOTER */
+footer{
+    justify-content: space-between;
+    background-color: #278be379;
+    padding: 20px 0;
+}
+.container-footer{
+    max-width: 1400px;
+    padding: 0 4%;
+    margin: auto;
+}
+.row-footer{
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer-col{
+    width: 25%;
+    padding: 0 15px;
+}
+.footer-col h4{
+    font-size: 24px;
+    color: #e7e7e7;
+    margin-bottom: 10px;
+    font-weight: 700;
+    position: relative;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+.footer-col ul{
+    list-style: none;
+}
+.footer-col ul li{
+    margin: 10px 0;
+}
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #e5e5e5;
+    font-weight: 400;
     display: block;
+    transition: all 0.3s ease;
 }
-.info-tabs .sub-title{
-    font-size: 28px;
-    margin-bottom: 25px;
-    text-align: center;   
-    color: var(--text-color);
+.footer-col ul li a:hover{
+    color: #ffffff;
+    padding-left: 10px;
+    transform: scaleY(1.4);
 }
-.info-tabs .description span{
-    color: #d0c202;
+.footer-col .medias-socias a{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    margin: 0 10px 10px 0;
+    text-decoration: none;
+    border: solid #fff;
+    border-radius: 50%;
+    color: #fff;
+    transition: all 0.5s ease;
 }
-.information{  /* responsaveis pelo container das informacoes da historia da empresa */
-    display: flexbox;
-    cursor: pointer;
+.footer-col .medias-socias a i:hover{
+    transform: scale(2.2);
 }
+
 @media (max-width: 1040px){
     .main .swiper-button-next, .main .swiper-button-prev{
         margin-top: 9rem;
+    }
+    .map #maps iframe{
+        margin: 0;
+        padding: 0;
+        border: 0;
+        margin-bottom: 2em; 
+        box-shadow:
+        -0.3px -0.3px 1.6px -6px rgba(0, 0, 0, 0.15),
+        -0.1px -0.1px 4.1px -6px rgba(0, 0, 0, 0.197),
+        0.7px 0.7px 7.8px -6px rgba(0, 0, 0, 0.225),
+        2.3px 2.5px 12.9px -6px rgba(0, 0, 0, 0.242),
+        5.2px 5.5px 19.6px -6px rgba(0, 0, 0, 0.254),
+        9.8px 10.5px 28.3px -6px rgba(0, 0, 0, 0.262),
+        17.4px 18.6px 39.5px -6px rgba(0, 0, 0, 0.268),
+        30.4px 32.6px 53.3px -6px rgba(0, 0, 0, 0.273),
+        56.3px 60.4px 68.9px -6px rgba(0, 0, 0, 0.279),
+        124px 133px 80px -6px rgba(0, 0, 0, 0.29);
+        min-width: 600px;
+        min-height: 600px;
     }
 }
 @media (max-width: 1199px){
     .main .swiper-button-next, .main .swiper-button-prev{
         margin-top: 1rem;
     }
+    .map #maps iframe{
+        margin: 0;
+        padding: 0;
+        border: 0;
+        margin-bottom: 2em; 
+        box-shadow:
+        -0.3px -0.3px 1.6px -6px rgba(0, 0, 0, 0.15),
+        -0.1px -0.1px 4.1px -6px rgba(0, 0, 0, 0.197),
+        0.7px 0.7px 7.8px -6px rgba(0, 0, 0, 0.225),
+        2.3px 2.5px 12.9px -6px rgba(0, 0, 0, 0.242),
+        5.2px 5.5px 19.6px -6px rgba(0, 0, 0, 0.254),
+        9.8px 10.5px 28.3px -6px rgba(0, 0, 0, 0.262),
+        17.4px 18.6px 39.5px -6px rgba(0, 0, 0, 0.268),
+        30.4px 32.6px 53.3px -6px rgba(0, 0, 0, 0.273),
+        56.3px 60.4px 68.9px -6px rgba(0, 0, 0, 0.279),
+        124px 133px 80px -6px rgba(0, 0, 0, 0.29);
+        min-width: 600px;
+        min-height: 600px;
+    }
 }
-
 /*fim do css fora*/
 @media (max-width: 600px){
+   
     #logo{
         max-width: 150px;
         margin: 0;
@@ -209,5 +388,32 @@ h1{
     .main .swiper-button-next, .main .swiper-button-prev{
         display: none;
     }
-   
+    
+    .map{
+        text-align: center;
+        margin-top: 0.7em;
+        font-size: 2em;
+        letter-spacing: 3px;
+        outline: #d44848;
+    }
+    
+    .map #maps iframe{
+        min-width: 280px;
+        min-height: 200px;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        margin-bottom: 2em; 
+        box-shadow:
+        -0.3px -0.3px 1.6px -6px rgba(0, 0, 0, 0.15),
+        -0.1px -0.1px 4.1px -6px rgba(0, 0, 0, 0.197),
+        0.7px 0.7px 7.8px -6px rgba(0, 0, 0, 0.225),
+        2.3px 2.5px 12.9px -6px rgba(0, 0, 0, 0.242),
+        5.2px 5.5px 19.6px -6px rgba(0, 0, 0, 0.254),
+        9.8px 10.5px 28.3px -6px rgba(0, 0, 0, 0.262),
+        17.4px 18.6px 39.5px -6px rgba(0, 0, 0, 0.268),
+        30.4px 32.6px 53.3px -6px rgba(0, 0, 0, 0.273),
+        56.3px 60.4px 68.9px -6px rgba(0, 0, 0, 0.279),
+        124px 133px 80px -6px rgba(0, 0, 0, 0.29);
+    }
 }
