--- a/css/home.css
+++ b/css/home.css
@@ -7,7 +7,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(../img/esporte1.jpg);
+    background-image: url(../img/ferramentas-esportivas.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -18,18 +18,18 @@ body, ul{
 }
 /* Inicio HEADER */
 a{
-    color: #000;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 0.89rem;
+    font-size: 1.09rem;
     
 }
 a:hover{
-    background: rgba(0, 0, 0, 0.05);
-}
-#logo{
-    max-width: 30vw;
+    background: rgba(0, 0, 0, 0.301);
+    color: #e5e5e5;
+    border-radius: 25%;
+    transform: scale(1.09); 
 }
 #header{
     width: 100%;
@@ -38,7 +38,10 @@ a:hover{
     padding: 1rem;
     display: flex;
     justify-content: space-between;
-    background: #e7e7e7;
+    background: #ffffff5e;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
 }
 #menu{
     display: flex;
@@ -62,8 +65,19 @@ a.active{
 /* FIM DO HEADER */
 /* TEXTO CENTRAL CARROSEL */
 #topText{
-    margin-top: 10px;
+    font-size: 2em;
+    padding-top: 65px;
     text-align: center;
+    color: #fff;
+    text-decoration: overline underline;
+    text-decoration-color: rgb(255, 255, 255);
+    text-decoration-style: double;
+    text-shadow: 5.4px 5.2px 11.8px rgba(0, 0, 0, 0.17),
+                 12.5px 12px 23px rgba(0, 0, 0, 0.173),
+                 22.6px 21.6px 34.5px rgba(0, 0, 0, 0.175),
+                 37.9px 36.3px 48.9px rgba(0, 0, 0, 0.174),
+                 65px 62.2px 71.2px rgba(0, 0, 0, 0.169),
+                 141px 135px 102px rgba(0, 0, 0, 0.152);   
 }
 
 
@@ -143,7 +157,7 @@ input {
 }
 .accordion-content p{
     margin: 0;
-    color: #000;
+    color: rgb(255, 255, 255);
     font-size: 23px;
 }
 input:checked + .accordion-label {
@@ -156,23 +170,30 @@ input:checked + .accordion-label::after {
 input:checked ~ .accordion-content {
     max-height: 100vh;
     padding: 16px;
-    background-color: #ff5574;
-    
+    background-color: #000000;
 }
 
 /* Fim css accordion */
 
 h3{
-    font-size: 2em;
-    color: #e8e8e8;
-    text-shadow:  2px 2px 5px #000;
-    color: #e7e7e7;
+    font-size: 2.2em;
+    color: #ffffff;
     text-align: center;
+    text-decoration: overline underline;
+    text-decoration-color: rgb(255, 255, 255);
+    text-decoration-style: double;
+    text-shadow: 5.4px 5.2px 11.8px rgba(0, 0, 0, 0.17),
+                 12.5px 12px 23px rgba(0, 0, 0, 0.173),
+                 22.6px 21.6px 34.5px rgba(0, 0, 0, 0.175),
+                 37.9px 36.3px 48.9px rgba(0, 0, 0, 0.174),
+                 65px 62.2px 71.2px rgba(0, 0, 0, 0.169),
+                 141px 135px 102px rgba(0, 0, 0, 0.152); 
 }
 p{
     font-size: 2em;
     text-align: center;
-    text-shadow: 1px 1px 3px #ff5574;
+    color: #e7e7e7;
+    text-shadow: 5px 5px 5px #000000;
     margin: 0;
     padding: 0;
 }
@@ -182,7 +203,8 @@ p{
     margin-top: 0.7em;
     font-size: 2em;
     letter-spacing: 3px;
-    outline: #d44848;
+    color: #fff;
+    text-shadow: 5px 5px 5px #000000;
 }
 .map #maps iframe{
     margin: 0;
@@ -226,6 +248,7 @@ footer{
 .footer-col h4{
     font-size: 24px;
     color: #e7e7e7;
+    text-shadow: 5px 5px 5px #000000;
     margin-bottom: 10px;
     font-weight: 700;
     position: relative;
@@ -242,6 +265,7 @@ footer{
     font-size: 16px;
     text-transform: capitalize;
     color: #e5e5e5;
+    text-shadow: 2px 2px 5px #000000;
     font-weight: 400;
     display: block;
     transition: all 0.3s ease;
@@ -317,7 +341,7 @@ footer{
     }
 }
 /*fim do css fora*/
-@media (max-width: 600px){
+@media (max-width: 650px){
    
     #logo{
         max-width: 150px;
@@ -335,13 +359,19 @@ footer{
         z-index: 1000;
         height: 0px;
         visibility: hidden;
-        overflow-y: hidden;
-        
+        overflow-y: hidden;   
+    }
+    a:hover{
+        border-radius: 0%;
+    }
+    #nav{
+        text-align: center;
     }
     #nav.active #menu{  
         visibility: visible;
         height: calc(65vh - 70px);
         overflow-y: auto;
+        text-align: center;
     }
     #menu a{
         padding: 1rem 0;
